# portfolio

./: .gitignore  Cargo.toml  Rocket.toml  home.md
src/: main.rs
static/css/: gruvbox.css  style.css
static/js/: colorscheme.js
templates/: base.tera  home.tera
