[package]
name = "portfolio"
version = "0.1.0"
authors = ["William T. Hollingsworth <william.t.hollingsworth@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.9.0"
rocket = { version = "0.4.6", features = ["tls"] }
#rocket = { version = "0.4.6" }
rocket_codegen = "0.4.6"
rocket_contrib = { version = "0.4.6", features = ["tera_templates"] }
serde = { version = "1.0.121", features = ["derive"] }
